--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.11.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
